Add: .env.template 형식 추가

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,14 @@
-ELASTICSEARCH_HOST=http://localhost:9200
+# Telegram API 설정
+TELEGRAM_API_KEY=your_telegram_bot_api_key
+TELEGRAM_CHAT_ID=your_telegram_chat_id
+
+# Dark Web URL
+DARKWEB_URL=your_darkweb_url
+
+# Elasticsearch 설정
+ELASTICSEARCH_URL=http://elasticsearch:9200
+ELASTIC_USER=your_elasticsearch_username
+ELASTIC_PASSWORD=your_elasticsearch_password
+
+# TOR 설정
 TOR_PROXY=socks5h://127.0.0.1:9050
-DARKWEB_URL=paste_here
