--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,17 @@
-version: "3.8"
 services:
   web:
     build: .
     env_file:
       - .env
+    volumes:
+      - .:/app
+    command: python3 main.py
     depends_on:
       - tor
       - elasticsearch
-    volumes:
-      - .:/app
-    command: python main.py
 
   tor:
     image: dperson/torproxy
-    command: ""
     ports:
       - "9050:9050"
 
@@ -21,5 +19,6 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.10.2
     environment:
       - discovery.type=single-node
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ports:
       - "9200:9200"
